--- a/MusicStore/Language/Chinese.xaml
+++ b/MusicStore/Language/Chinese.xaml
@@ -18,4 +18,11 @@
     <TextBlock x:Key="choosebtn1" Text="选择文件"/>
     <TextBlock x:Key="choosebtn2" Text="选择文件"/>
     <TextBlock x:Key="applybtn" Text="应用更改"/>
+    <TextBlock x:Key="librarybtn" Text="图书馆"/>
+    <TextBlock x:Key="shopbtn" Text="店铺"/>
+    <TextBlock x:Key="optionbtn" Text="选项"/>
+    <s:String x:Key="USER">用户: </s:String>
+    <s:String x:Key="USERTYPE">用户类型: </s:String>
+    <s:String x:Key="AVAIBLEFUNDS">可用资金: </s:String>
+    <TextBlock x:Key="logoutbtn" Text="登出"/>
 </ResourceDictionary>
