--- a/MusicStore/Language/Polski.xaml
+++ b/MusicStore/Language/Polski.xaml
@@ -18,5 +18,12 @@
     <TextBlock x:Key="choosebtn1" Text="Wybierz plik"/>
     <TextBlock x:Key="choosebtn2" Text="Wybierz plik"/>
     <TextBlock x:Key="applybtn" Text="Zastosuj"/>
+    <TextBlock x:Key="librarybtn" Text="Biblioteka"/>
+    <TextBlock x:Key="shopbtn" Text="Sklep"/>
+    <TextBlock x:Key="optionbtn" Text="Ustawienia"/>
+    <s:String x:Key="USER">Użytkownik: </s:String>
+    <s:String x:Key="USERTYPE">Typ użytkownika: </s:String>
+    <s:String x:Key="AVAIBLEFUNDS">Dostępne środki: </s:String>
+    <TextBlock x:Key="logoutbtn" Text="Wyloguj się"/>
 
 </ResourceDictionary>
