--- a/MusicStore/MusicPlayer.xaml
+++ b/MusicStore/MusicPlayer.xaml
@@ -121,7 +121,8 @@
                             VerticalAlignment="Center" 
                             Width="350" 
                             Maximum="9" 
-                            ValueChanged="songSlider_ValueChanged"
+                            ValueChanged="songSlider_ValueChanged" SmallChange="0.001" LargeChange="10" Interval="10"
+                            IsSnapToTickEnabled="false" IsMoveToPointEnabled="True" 
                             />
                     <Button    x:Name="btnpauza"
                                Content="⏸"
