--- a/MusicStore/Pages/Options.xaml
+++ b/MusicStore/Pages/Options.xaml
@@ -9,7 +9,8 @@
       Title="Options">
 
     <Grid>
-        <Button Width="100" Height="75">aha</Button>
-        
+        <CheckBox Content="Tryb ciemny" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="CheckBox_Checked" IsChecked="True"/>
+        <ComboBox x:Name="jezykbox" Text="Wybierz język" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" Width="265" Height="36" SelectionChanged="Jezykbox_SelectionChanged"/>
+        <Label Content="Wybierz język" HorizontalAlignment="Left" Margin="10,54,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Page>
